feat(collaborative-ui): 🎸 create Monaco demo

--- a/packages/collaborative-ui/package.json
+++ b/packages/collaborative-ui/package.json
@@ -42,6 +42,7 @@
     "@jsonjoy.com/collaborative-input": "workspace:*",
     "@jsonjoy.com/collaborative-input-react": "workspace:*",
     "@jsonjoy.com/collaborative-monaco": "workspace:*",
+    "@jsonjoy.com/collaborative-monaco-react": "workspace:*",
     "@jsonjoy.com/collaborative-quill": "workspace:*",
     "@jsonjoy.com/collaborative-str": "workspace:*",
     "@jsonjoy.com/json-pack": "workspace:*",
