feat(collaborative-ui): 🎸 add Quill side-by-side demo

--- a/packages/collaborative-ui/package.json
+++ b/packages/collaborative-ui/package.json
@@ -44,6 +44,7 @@
     "@jsonjoy.com/collaborative-monaco": "workspace:*",
     "@jsonjoy.com/collaborative-monaco-react": "workspace:*",
     "@jsonjoy.com/collaborative-quill": "workspace:*",
+    "@jsonjoy.com/collaborative-quill-react": "workspace:*",
     "@jsonjoy.com/collaborative-str": "workspace:*",
     "@jsonjoy.com/json-pack": "workspace:*",
     "@jsonjoy.com/json-pointer": "workspace:*",
