--- a/packages/collaborative-peritext/package.json
+++ b/packages/collaborative-peritext/package.json
@@ -36,6 +36,8 @@
     "crdt"
   ],
   "dependencies": {
+    "@jsonjoy.com/json-equal": "workspace:*",
+    "@jsonjoy.com/util": "workspace:*",
     "json-joy": "workspace:*"
   },
   "peerDependencies": {
