chore: 🤖 show logging in prosemirror story

--- a/packages/json-equal/package.json
+++ b/packages/json-equal/package.json
@@ -37,6 +37,9 @@
   "peerDependencies": {
     "tslib": "*"
   },
+  "dependencies": {
+    "@jsonjoy.com/codegen": "workspace:*"
+  },
   "engines": {
     "node": ">=10.0"
   },
