--- a/packages/collaborative-peritext/package.json
+++ b/packages/collaborative-peritext/package.json
@@ -47,12 +47,14 @@
     "tslib": "*"
   },
   "devDependencies": {
-    "@storybook/react": "^10.2.0",
+    "@jsonjoy.com/json-random": "workspace:^",
+    "@storybook/react": "^10.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prosemirror-example-setup": "^1.2.3",
     "prosemirror-schema-basic": "^1.2.4",
     "prosemirror-schema-list": "^1.5.1",
+    "prosemirror-test-builder": "^1.1.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3"
   },
