test(collaborative-react): 💍 setup useModelTick() tests

--- a/package.json
+++ b/package.json
@@ -111,6 +111,7 @@
           "collaborative-monaco-react",
           "collaborative-peritext",
           "collaborative-prosemirror",
+          "collaborative-react",
           "collaborative-quill",
           "collaborative-quill-react",
           "collaborative-slate",
