--- a/packages/collaborative-react/package.json
+++ b/packages/collaborative-react/package.json
@@ -35,11 +35,13 @@
     "json-joy": "workspace:*"
   },
   "peerDependencies": {
-    "tslib": "*",
-    "react": "^19"
+    "react": "^19",
+    "tslib": "*"
   },
   "devDependencies": {
     "@storybook/react": "^10.2.8",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/react": "^16.3.2",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "react": "^19.2.4",
