feat(collaborative-presence): 🎸 setup a presence package

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
           "collaborative-monaco",
           "collaborative-monaco-react",
           "collaborative-peritext",
+          "collaborative-presence",
           "collaborative-prosemirror",
           "collaborative-react",
           "collaborative-quill",
