feat(collaborative-presence): 🎸 add PresenceManager implementation

--- a/packages/collaborative-presence/package.json
+++ b/packages/collaborative-presence/package.json
@@ -35,7 +35,8 @@
     "crdt"
   ],
   "dependencies": {
-    "json-joy": "workspace:*"
+    "json-joy": "workspace:*",
+    "thingies": "^2.5.0"
   },
   "peerDependencies": {
     "tslib": "*"
