--- a/packages/collaborative-ui/package.json
+++ b/packages/collaborative-ui/package.json
@@ -93,8 +93,8 @@
     "lib/"
   ],
   "scripts": {
-    "clean": "rimraf lib typedocs coverage gh-pages yarn-error.log",
-    "build": "tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib",
+    "clean": "npx rimraf lib typedocs coverage gh-pages yarn-error.log",
+    "build": "npx tsc --project tsconfig.build.json --module commonjs --target es2020 --outDir lib",
     "jest": "node -r ts-node/register ./node_modules/.bin/jest",
     "test": "jest --maxWorkers 7",
     "test:ci": "yarn jest --maxWorkers 3 --no-cache",
