feat(collaborative-peritext): 🎸 improve presence decoration rendering

--- a/packages/collaborative-peritext/package.json
+++ b/packages/collaborative-peritext/package.json
@@ -38,6 +38,7 @@
   "dependencies": {
     "@jsonjoy.com/collaborative-presence": "workspace:*",
     "@jsonjoy.com/json-equal": "workspace:*",
+    "@jsonjoy.com/ui": "workspace:*",
     "@jsonjoy.com/util": "workspace:*",
     "json-joy": "workspace:*",
     "nano-theme": "^1.5.0",
