--- a/packages/collaborative-peritext/package.json
+++ b/packages/collaborative-peritext/package.json
@@ -42,6 +42,7 @@
     "@jsonjoy.com/util": "workspace:*",
     "json-joy": "workspace:*",
     "nano-theme": "^1.5.0",
+    "prosemirror-history": "^1.5.0",
     "prosemirror-model": "^1.25.4",
     "prosemirror-state": "^1.4.4",
     "prosemirror-view": "^1.41.5"
