--- a/packages/collaborative-peritext/package.json
+++ b/packages/collaborative-peritext/package.json
@@ -45,6 +45,7 @@
     "prosemirror-history": "^1.5.0",
     "prosemirror-model": "^1.25.4",
     "prosemirror-state": "^1.4.4",
+    "prosemirror-transform": "^1.11.0",
     "prosemirror-view": "^1.41.5"
   },
   "peerDependencies": {
