feat(collaborative-prosemirror): 🎸 setup collaborative-prosemirror package

--- a/packages/collaborative-slate/package.json
+++ b/packages/collaborative-slate/package.json
@@ -107,6 +107,7 @@
     }
   },
   "devDependencies": {
+    "@jsonjoy.com/collaborative-ui": "workspace:*",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@udecode/plate": "^49.0.0",
