--- a/packages/collaborative-slate/package.json
+++ b/packages/collaborative-slate/package.json
@@ -84,7 +84,9 @@
     "@jsonjoy.com/collaborative-peritext": "workspace:*",
     "@jsonjoy.com/collaborative-presence": "workspace:*",
     "@jsonjoy.com/json-equal": "workspace:*",
-    "json-joy": "workspace:*"
+    "@jsonjoy.com/ui": "workspace:*",
+    "json-joy": "workspace:*",
+    "nano-theme": "^1.5.0"
   },
   "peerDependencies": {
     "react": ">=18",
