chore(collaborative-slate): 🤖 remove demos

--- a/packages/collaborative-slate/package.json
+++ b/packages/collaborative-slate/package.json
@@ -56,9 +56,7 @@
     "build:pages": "rimraf gh-pages && mkdir -p gh-pages && cp -r typedocs/* gh-pages && cp -r coverage gh-pages/coverage",
     "deploy:pages": "gh-pages -d gh-pages",
     "publish-coverage-and-typedocs": "yarn typedoc && yarn coverage && yarn build:pages && yarn deploy:pages",
-    "typecheck": "tsc -p .",
-    "demo:slate": "webpack serve --config src/__demos__/slate/webpack.config.js",
-    "demo:plate": "webpack serve --config src/__demos__/plate/webpack.config.js"
+    "typecheck": "tsc -p ."
   },
   "jest": {
     "preset": "ts-jest",
@@ -113,24 +111,11 @@
     "@jsonjoy.com/collaborative-ui": "workspace:*",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@udecode/plate": "^49.0.0",
-    "@udecode/plate-basic-marks": "^49.0.0",
-    "@udecode/plate-block-quote": "^49.0.0",
-    "@udecode/plate-code-block": "^49.0.0",
-    "@udecode/plate-common": "^42.0.0",
-    "@udecode/plate-heading": "^49.0.0",
-    "css-loader": "^7.1.2",
-    "html-webpack-plugin": "^5.6.6",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "slate": "^0.123.0",
     "slate-dom": "^0.123.0",
     "slate-history": "^0.113.1",
-    "slate-react": "^0.123.0",
-    "style-loader": "^4.0.0",
-    "ts-loader": "^9.5.4",
-    "webpack": "^5.104.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.3"
+    "slate-react": "^0.123.0"
   }
 }
